[metadata]
name = python-pyage
version = attr: pyage.__version__
author = Toni Barth
author_email = software@satoprogs.de

[options]
include_package_data = True
packages = find:
install_requires = 
    cytolk==0.1.11; platform_system == 'Windows'
    pygame==2.1.2
    python-singleton-metaclasses==0.2.0
    synthizer==0.12.0; platform_system == 'Windows'
    accessible_output2 @ https://www.github.com/accessibleapps/accessible_output2 ; platform_system != 'Windows'

[options.package_data]
pyage = py.typed

[options.extras_require]
ao2 = 
    accessible_output2 @ https://www.github.com/accessibleapps/accessible_output2 ; platform_system == 'Windows'

dev = 
    accessible_output2 @ https://www.github.com/accessibleapps/accessible_output2 ; platform_system == 'Windows'
    black==22.1.0
    flake8==4.0.1
    isort==5.10.1
    mypy==0.941
    pre-commit==2.17.0
    sphinx==4.4.0
    sphinx-autodoc-typehints==1.17.0
    wheel

[flake8]
ignore = E203, E266, E501, W503
max-line-length = 88
max-complexity = 18
select = B,C,E,F,W,T4

[isort]
src_paths=pyage
multi_line_output=3
include_trailing_comma=True
force_grid_wrap=0
use_parentheses=True
line_length=88
ensure_newline_before_comments = True

[mypy]
files=pyage

[mypy-accessible_output2.*]
ignore_missing_imports=true

[mypy-pysingleton]
ignore_missing_imports=true

[mypy-cytolk]
ignore_missing_imports=true

[mypy-synthizer]
ignore_missing_imports=true
